# pupil-core-network-client

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  README.rst  pyproject.toml  setup.cfg
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: basic.py  estimated_clock_offset.py  hmd_streaming.py  receive_scene_video_frames.py  send_annotations.py
src/pupil_labs/pupil_core_network_client/: __init__.py  decorators.py  device.py  subscription.py
tests/: test_api.py
