[metadata]
name = pupil_core_network_client
description = A Python client for the Pupil Core Network API
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/papr/pupil-core-network-client
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find_namespace:
install_requires =
    msgpack>=1.0.0
    pyzmq
    importlib-metadata;python_version<"3.8"
python_requires = >=3.7
include_package_data = true
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
docs =
    furo
    jaraco.packaging>=8.2
    rst.linker>=1.9
    sphinx<4.4  # 4.4 does not detect TypeVars correctly
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.0.1
    pytest-mypy
